[package]
name = "exfat-utils"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dumpexfat"
path = "src/dump/main.rs"

[[bin]]
name = "exfatattrib"
path = "src/attrib/main.rs"

[[bin]]
name = "exfatfsck"
path = "src/fsck/main.rs"

[[bin]]
name = "exfatlabel"
path = "src/label/main.rs"

[[bin]]
name = "mkexfatfs"
path = "src/mkfs/main.rs"

[[bin]]
name = "modexfatfs"
path = "src/modfs/main.rs"

[[bin]]
name = "exfatctl"
path = "src/ctl/main.rs"

[dependencies]
bytemuck = "1.16.0"
byteorder = "1.5.0"
env_logger = "0.11.3"
getopts = "0.2.21"
libexfat = { git = "https://github.com/kusumi/libexfat" }
libfs = { git = "https://github.com/kusumi/libfs" }
log = "0.4.22"
nix = { version = "0.29.0", features = ["fs", "ioctl"] }
path-clean = "1.0.1"
walkdir = "2.5.0"
